<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <POU Name="FB_TemperatureSensor_KL3214" Id="{9aed2d1e-5e74-424b-9a96-42a41b94f249}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_TemperatureSensor_KL3214 EXTENDS FB_Sensor
VAR_INPUT
END_VAR
VAR_OUTPUT
	fTemperature : REAL; //measured temperature in degreeC
END_VAR
VAR	
	//I/O-Links
	temperature_IN AT %I* : INT;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[]]></ST>
    </Implementation>
    <Method Name="GetState_AI" Id="{c6205cd9-b487-4859-9e5e-2a62e89c5196}">
      <Declaration><![CDATA[METHOD GetState_AI : BOOL
VAR_INPUT
END_VAR
VAR
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[// conversion with 0.1 resolution
fTemperature := (INT_TO_REAL(temperature_IN))*0.1;

//sensor state
sensorState.fValue := fTemperature;
sensorState.sUnit := 'degreeC';
]]></ST>
      </Implementation>
    </Method>
    <LineIds Name="FB_TemperatureSensor_KL3214">
      <LineId Id="9" Count="0" />
    </LineIds>
    <LineIds Name="FB_TemperatureSensor_KL3214.GetState_AI">
      <LineId Id="6" Count="0" />
      <LineId Id="5" Count="0" />
      <LineId Id="14" Count="0" />
      <LineId Id="13" Count="0" />
      <LineId Id="15" Count="0" />
      <LineId Id="17" Count="0" />
      <LineId Id="16" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>